fix funding gap

--- a/src/app/views/brush/projection-chart-uk/projection-chart-uk.component.scss
+++ b/src/app/views/brush/projection-chart-uk/projection-chart-uk.component.scss
@@ -14,32 +14,36 @@ $axis-line-dark-grey: darkgrey;
     padding: 0.875rem;
     &__filter {
         flex: 0 1 auto;
-        width: 20%;
-        background-color: aqua; // flex: 1 1 20%;
+        width: 20%; // background-color: aqua; // flex: 1 1 20%;
         transition: all .4s ease-out;
         display: flex;
         flex-direction: column;
         &-projection {
-            .list-inline-item {}
+            .list-inline {
+                margin-left: 0.25rem;
+                color: $primary-font-color;
+            }
         }
         &-period {
+            display: table;
+            margin: 0 auto;
             .list-inline {
-                display: flex;
-                justify-content: space-evenly;
+                // display: flex;
+                // justify-content: space-evenly;
+                // margin-left: 1.5rem;
+                color: $primary-font-color;
             }
-
-            .list-inline-item  {
-                width: 1rem;
-                background-color: yellow;
-                text-align: center;
-                // transition: all .2s;
-
+            .list-inline-item {
+                width: 1.5rem;
+                text-align: center; // transition: all .2s;
                 span {
-                    transition: all .2s;
-
+                    transition: all .3s ease-out;
                 }
             }
-
+            .list-inline-item:first-child {
+                cursor: pointer;
+                transition: all .3s ease-out;
+            }
         }
         &-pie {
             // &-wrapper {
@@ -47,7 +51,28 @@ $axis-line-dark-grey: darkgrey;
             // }
             &-svg {
                 width: 100%;
-                height: 12.5rem;
+                height: 15rem;
+            }
+        }
+        &-category {
+            // display: table;
+            // /* Allow the centering to work */
+            // margin: 0 auto;
+
+            font-size: 0.8rem;
+
+            .list-group {
+                background-color: transparent;
+                color: $primary-font-color;
+            }
+            .list-group-item {
+                border: 0;
+                padding-left: 5px; // transition: all 0.8s cubic-bezier(0.22, 0.61, 0.36)
+            }
+            &-rect {
+                display: inline-block;
+                width: 10px;
+                height: 10px;
             }
         }
     }
@@ -178,7 +203,8 @@ $axis-line-dark-grey: darkgrey;
     position: relative;
     display: block;
     cursor: pointer; // padding: 5px;;
-    transform: scale(1.1);
+    transform: scale(1);
+    font-weight: 600;
     transition: all 0.2s;
 }
 
@@ -227,7 +253,3 @@ $axis-line-dark-grey: darkgrey;
     transform: scale(1);
     transition: all 0.2s;
 }
-
-// .projection__fitler-currrent-proposed {
-//     background-color: red;
-// }
